<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:gravity="center"
   android:padding="16dip">
   <TextView
      android:text="@string/twoPlayer_label"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="14dip"
      android:textSize="16.5sp" />
   <Button
      android:id="@+id/twoplayer_newgame_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/new_game_label" />
   <Button
      android:id="@+id/twoplayer_continue_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/continue_label"
      android:visibility="gone" />
   <Button
      android:id="@+id/twoplayer_acknowledge_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/acknowledge_label" />
   
   <Button
      android:id="@+id/twoplayer_instruction_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/word_game_play" />
   
    <Button
      android:id="@+id/twoplayer_highScores_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/twoplayer_highScoreButtonLabel" />
   
   <Button
      android:id="@+id/twoplayer_setting_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/word_game_settings" />
   
   <Button
      android:id="@+id/twoplayer_exit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/exit_label" />
</LinearLayout>