<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:padding="2dip">
   
   <TextView
      android:id="@+id/twoplayer_welcomeusername_textview"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="2dip"
      android:textSize="14sp"/>
   
   <!-- enter user name... -->
   <TextView
      android:id="@+id/twoplayer_enterusername_textview"
      android:text="@string/twoplayer_enterUserName"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:textSize="14sp"/>
   
   <EditText
        android:id="@+id/twoplayer_entername_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textNoSuggestions"
        android:hint="Type user name...">
        <requestFocus />
    </EditText>
    
   <Button
      android:id="@+id/twoplayer_submitusername_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/twoplayer_registerUserName" />
   
   
   <!-- enter target score																																																																																																																																																																																																										... -->
   
   <TextView
      android:id="@+id/twoplayer_targetscore_textview"
      android:text="@string/twoplayer_targetscorelabel"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:textSize="14sp"
      android:visibility="gone"/>
   
   <EditText
        android:id="@+id/twoplayer_entertargetscore_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textNoSuggestions"
        android:hint="Enter target score..."
        android:visibility="gone">
        <requestFocus />
    </EditText>
    
   <!-- enter opponent search... -->
   
   <TextView
      android:id="@+id/twoplayer_opponentname_textview"
      android:text="@string/twoplayer_enterOpponentName"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:textSize="14sp"
      android:visibility="gone"/>
   
   <EditText
        android:id="@+id/twoplayer_enteropponentname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textNoSuggestions"
        android:hint="Type opponent name..."
        android:visibility="gone">
        <requestFocus />
    </EditText>
    
   <Button
      android:id="@+id/twoplayer_submitopponentname_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/twoplayer_findOpponentLabel" 
      android:visibility="gone"/>
   
   <TextView
      android:id="@+id/twoplayer_randomPlayerSearchTextLabel"
      android:text="@string/twoplayer_randomplayerlabel"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:textSize="14sp"
      android:visibility="gone"/>
   
   
   <Button
      android:id="@+id/twoplayer_newgameexit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/exit_label" />
   
   <TextView
        android:id="@+id/twoplayer_gameconnect_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:freezesText="true"/>
</LinearLayout>