<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/hello_mad_about_background">

    <EditText
        android:id="@+id/commnunication_key_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textNoSuggestions"
        android:hint="Type key...">
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/commnunication_value_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textNoSuggestions"
        android:hint="Type value...">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/communication_send_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendComButtonText" />
    
     <Button
        android:id="@+id/communication_get_from_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getComButtonText" />
     
      <Button
        android:id="@+id/communication_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearButtonText" />
   

    <TextView
        android:id="@+id/communication_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:freezesText="true"/>
    	
</LinearLayout>